# spring-microservices/accounts/src/main/kotlin/com/micro/accounts/dto/CustomerDetailsDto.kt
@@ -1,13 +1,15 @@
 package com.micro.accounts.dto
 
+import com.micro.cards.model.Card
+import com.micro.loans.model.Loan
 import io.swagger.v3.oas.annotations.media.Schema
 
 @Schema(
     name = "Customer Details",
-    description = "Customer, Account and Loand details"
+    description = "Customer, Account and Loan details"
 )
 data class CustomerDetailsDto(
     val customerDto: CustomerDto,
-    val cardDto: CardDto,
-    val loanDto: LoanDto,
+    val cardDto: Card,
+    val loanDto: Loan,
 )
